--- a/style.css
+++ b/style.css
@@ -16,18 +16,23 @@ align-items: center;
 }
 
 .clock {
+background-color: aliceblue;
 width: 30rem;
 height: 30rem;
-border: 20px solid white;
+border: 20px solid darkblue;
 border-radius: 50%;
 margin: 50px auto;
 position: relative;
 padding: 2rem;
 box-shadow:
+    rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px inset,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+/* box-shadow:
     0 0 0 4px rgba(0,0,0,0.1),
     inset 0 0 0 3px #EFEFEF,
     inset 0 0 10px black,
-    0 0 10px rgba(0,0,0,0.2);
+    0 0 10px rgba(0,0,0,0.2); */
 }
 
 .clock-face {
